--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
 	"version": "1.0.0",
 	"minAppVersion": "1.0.0",
 	"description": "Automatically create notes from templates when specific tags are added to content",
-	"author": "kawana",
-	"authorUrl": "",
+	"author": "Fiction000",
+	"authorUrl": "https://github.com/Fiction000",
 	"isDesktopOnly": false
 }
