--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"name": "Tag Templater",
 	"version": "1.0.0",
 	"minAppVersion": "1.0.0",
-	"description": "Automatically create notes from templates when specific tags are added to content",
+	"description": "Automatically create notes from templates when specific tags are added to content.",
 	"author": "Fiction000",
 	"authorUrl": "https://github.com/Fiction000",
 	"isDesktopOnly": false
